tests/invalid/multi_output_stencil_not_object.esm
{
  "esm": "0.2.0",
  "metadata": {
    "name": "MultiOutputStencilNotObject",
    "description": "Invalid: multi_output_stencil with stencil as flat array (must be object keyed by output name per RFC §7.9). Schema must reject because MultiOutputStencilRule.stencil is type:object, not type:array."
  },
  "models": {
    "Empty": {
      "variables": { "q": { "type": "state", "units": "1", "default": 0.0 } },
      "equations": [{ "lhs": { "op": "D", "args": ["q"], "wrt": "t" }, "rhs": 0.0 }]
    }
  },
  "discretizations": {
    "bad_scheme": {
      "kind": "multi_output_stencil",
      "applies_to": { "op": "reconstruct", "args": ["$q"], "dim": "$x" },
      "outputs": ["q_left_edge", "q_right_edge"],
      "stencil": [
        { "selector": { "kind": "cartesian", "axis": "$x", "offset": 0 }, "coeff": 1.0 }
      ]
    }
  }
}
